# gepa-dapo-grn

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BEADS.md  REPO_STANDARDS.md  graph_active_dapo.md
examples/: active_grpo_demo.py  gepa_hybrid_curriculum_demo.py  graph_active_dapo_demo.py  graph_feedback_demo.py  maxrl_verifier_demo.py  simple_bandit_demo.py  toy_lm_reasoning.py
scripts/: install_local_wheel.py  validate_dist_metadata.py
src/gepa_dapo_grn/: __init__.py  _compat.py  _numeric_helpers.py  _packaging.py  _version.py  app.py  config.py  curriculum.py  dapo_core.py  ema_utils.py  eval_hooks.py  gepa_interfaces.py  grn.py  logging_utils.py  maxrl_core.py  policy_interfaces.py  reward_mixers.py  safety_controller.py  sampling.py  trainer.py  verifiers.py
src/gepa_dapo_grn/active_grpo/: __init__.py  promotion.py  references.py  scheduler.py
src/gepa_dapo_grn/graph/: __init__.py  feedback.py  metrics.py  schema.py  validators.py
src/gepa_dapo_grn/integration/: hf_lm.py
src/gepa_dapo_grn/trainers/: __init__.py  graph_active_dapo.py
tests/: test_active_references.py  test_active_scheduler.py  test_curriculum_tracker.py  test_dapo_core.py  test_gepa_interfaces.py  test_graph_active_dapo_smoke.py  test_graph_metrics.py  test_graph_schema.py  test_graph_validation.py  test_grn.py  test_install_local_wheel.py  test_logging_utils.py  test_maxrl_backend.py  test_packaging_helpers.py  test_packaging_metadata.py  test_public_api.py  test_reference_promotion.py  test_reward_mixers.py  test_safety_controller.py  test_validate_dist_metadata.py
