[project]
name = "gepa-dapo-grn"
version = "0.1.0"
description = "Baseline Python repository scaffold."
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

target-version = ["py310"]

[tool.ruff]
line-length = 100

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
