[project]
name = "gepa-dapo-grn"
version = "0.1.0"
description = "GEPA-aware DAPO RL library with optional GRN modules."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.0,<3.0"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

target-version = ["py310"]

[tool.ruff]
line-length = 100

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
