[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa-dapo-grn"
version = "0.1.0"
description = "GEPA-aware DAPO reinforcement learning with optional Global Response Normalization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "InfiniteMalice" }]
dependencies = ["torch>=2.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
hf = ["transformers>=4.40"]
dev = ["pytest", "ruff", "black"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

target-version = ["py39"]

[tool.ruff]
line-length = 100

target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
